# course_dimensionality

./: Abrir_OBJ.zpr  CMakeLists.txt  Octree.h  Octreemejorado.h  README.md  course_dimensionality  main.cpp
tarea2/: main.cpp  octree
